Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Tin tức sáng 25-3: Đề xuất tiếp tục giảm VAT 2% đến hết năm 2026; Giá USD ngân hàng tăng mạnh",
+    "content": "Bộ Tài chính hiện đang đề xuất tiếp tục giảm thuế giá trị gia tăng (VAT) 2% đến hết năm 2026 nhằm kích cầu tiêu dùng và hỗ trợ doanh nghiệp. Theo dự thảo, thuế suất VAT sẽ giảm từ 10% xuống còn 8% đối với một số hàng hóa và dịch vụ. Trong khi đó, giá USD ngân hàng đã tăng mạnh, với tỷ giá trung tâm được niêm yết ở mức 24.831 đồng, tăng 18 đồng so với cuối tuần trước. Việc này sẽ ảnh hưởng đến thị trường và hoạt động giao dịch ngoại hối.",
+    "link": "https://tuoitre.vn/tin-tuc-sang-25-3-de-xuat-tiep-tuc-giam-vat-2-den-het-nam-2026-gia-usd-ngan-hang-tang-manh-20250324193002294.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Đề xuất giảm thuế VAT 2% sẽ áp dụng từ khi nào?",
+    "answers": [
+      {
+        "text": "Từ ngày 1-7-2025 đến hết ngày 31-12-2026",
+        "correct": true
+      },
+      {
+        "text": "Ngay lập tức từ tháng 3 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Từ ngày 1-1-2026",
+        "correct": false
+      },
+      {
+        "text": "Từ tháng 4 năm 2025",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nga: Ukraine không muốn hòa bình",
     "content": "Quan chức Nga cho rằng hành động tấn công cơ sở hạ tầng dân sự của Ukraine chứng tỏ nước này không muốn hòa bình. Người phát ngôn Bộ Ngoại giao Nga, Maria Zakharova, đã chỉ trích việc Ukraine thực hiện các cuộc tấn công trước các cuộc đàm phán quốc tế, cho rằng đây là hành vi khủng bố và cực đoan. Bà Zakharova cũng nhấn mạnh rằng chính quyền Kiev đã nhiều lần tuyên bố không cần hòa bình, đồng thời cáo buộc Ukraine vi phạm lệnh ngừng bắn một phần do Mỹ làm trung gian.",
     "link": "https://dantri.com.vn/the-gioi/nga-ukraine-khong-muon-hoa-binh-20250324223201710.htm",
@@ -971,33 +998,6 @@
     ]
   },
   {
-    "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
-    "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
-    "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Toyota đã có những đóng góp gì trong 30 năm hoạt động tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Xuất xưởng xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Mở rộng thị trường sang các nước khác.",
-        "correct": false
-      },
-      {
-        "text": "Giảm giá xe cho khách hàng.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường quảng cáo sản phẩm mới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thai phụ uống cacao được không?",
     "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
     "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
@@ -1020,6 +1020,33 @@
       },
       {
         "text": "Cacao có thể gây hại cho thai nhi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
+    "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
+    "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Toyota đã có những đóng góp gì trong 30 năm hoạt động tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Xuất xưởng xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Mở rộng thị trường sang các nước khác.",
+        "correct": false
+      },
+      {
+        "text": "Giảm giá xe cho khách hàng.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường quảng cáo sản phẩm mới.",
         "correct": false
       }
     ]
@@ -1288,33 +1315,6 @@
     ]
   },
   {
-    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
-    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
-    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
-    "cat": "giai-tri",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
-    "answers": [
-      {
-        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
-        "correct": true
-      },
-      {
-        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
-        "correct": false
-      },
-      {
-        "text": "Vì phim không đạt được rating cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh không hợp với vai diễn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chạy bộ có phải môn thể thao cho người giàu?",
     "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
     "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
@@ -1337,6 +1337,33 @@
       },
       {
         "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
+    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
+    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
+    "cat": "giai-tri",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
+    "answers": [
+      {
+        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
+        "correct": false
+      },
+      {
+        "text": "Vì phim không đạt được rating cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh không hợp với vai diễn.",
         "correct": false
       }
     ]
