Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
+    "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
+    "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Lễ cưới của Lê Hồng Phước được trang trí bằng gì?",
+    "answers": [
+      {
+        "text": "400 chiếc bánh đặc sản và rau củ quả",
+        "correct": true
+      },
+      {
+        "text": "1000 chiếc bánh mì",
+        "correct": false
+      },
+      {
+        "text": "500 hoa tươi",
+        "correct": false
+      },
+      {
+        "text": "300 chai rượu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mỹ nhân điền kinh lại gây tranh cãi dù lập kỷ lục Trung Quốc",
     "content": "Mỹ nhân điền kinh Wu Yanni đã gây ra nhiều tranh cãi mặc dù lập kỷ lục quốc gia trong nội dung 60m rào tại giải vô địch thế giới, khi cô chỉ về thứ ba ở bán kết và không đủ điều kiện vào chung kết. Dù thành tích của cô là 8,01 giây, tốt thứ tư của một phụ nữ châu Á, nhưng nhiều người đã chỉ trích cô trên mạng xã hội, cho rằng sự nổi tiếng của cô không tương xứng với khả năng. Wu Yanni, nữ VĐV 27 tuổi, đã rơi nước mắt khi biết mình lập kỷ lục và cảm ơn sự ủng hộ của gia đình và bạn bè.",
     "link": "https://vnexpress.net/my-nhan-dien-kinh-lai-gay-tranh-cai-du-lap-ky-luc-trung-quoc-4865285.html",
@@ -734,6 +761,37 @@
     ]
   },
   {
+    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
+    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
+    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
+    "answers": [
+      {
+        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
+        "correct": true
+      },
+      {
+        "text": "Không có ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Giúp trẻ em phát triển nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Làm tăng cường sức khỏe cho trẻ.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vợ cầu thủ Quang Hải sở hữu loạt túi hàng hiệu Hermès, Dior đắt giá",
     "content": "Vợ cầu thủ Quang Hải, Chu Thanh Huyền, nổi bật với bộ sưu tập túi xách hàng hiệu đến từ các thương hiệu nổi tiếng như Hermès và Dior. Cô là một doanh nhân thành công trong lĩnh vực mỹ phẩm trực tuyến và thường xuyên chia sẻ về cuộc sống xa hoa của mình trên mạng xã hội. Bộ sưu tập của cô bao gồm những mẫu túi đắt giá như Hermès Birkin, Hermès Picotin, và Mini Lady Dior, thể hiện gu thời trang tinh tế và đẳng cấp của một người phụ nữ hiện đại.",
     "link": "https://dantri.com.vn/giai-tri/vo-cau-thu-quang-hai-so-huu-loat-tui-hang-hieu-hermes-dior-dat-gia-20250323231704019.htm",
@@ -783,37 +841,6 @@
       },
       {
         "text": "Đỏ và lỏng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
-    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
-    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
-    "answers": [
-      {
-        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
-        "correct": true
-      },
-      {
-        "text": "Không có ảnh hưởng gì.",
-        "correct": false
-      },
-      {
-        "text": "Giúp trẻ em phát triển nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Làm tăng cường sức khỏe cho trẻ.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
         "correct": false
       }
     ]
