Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "4 cơ chế gây ung thư của rượu bia",
+    "content": "Rượu bia có thể gây ung thư thông qua bốn cơ chế chính: làm tổn thương DNA, gây viêm nhiễm, rối loạn hormone và hỗ trợ hấp thụ các chất gây ung thư khác. Theo nghiên cứu, ngay cả việc tiêu thụ một lượng nhỏ rượu cũng có thể làm tăng nguy cơ ung thư, đặc biệt là ung thư vú do sự gia tăng nồng độ estrogen. Cựu Tổng Y sĩ Mỹ đã nhấn mạnh mối liên hệ này và kêu gọi dán nhãn cảnh báo trên các sản phẩm có cồn.",
+    "link": "https://vnexpress.net/4-co-che-gay-ung-thu-cua-ruou-bia-4865332.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Rượu bia gây ung thư qua những cơ chế nào?",
+    "answers": [
+      {
+        "text": "Gây tổn thương DNA, viêm nhiễm, rối loạn hormone, hấp thụ chất gây ung thư khác",
+        "correct": true
+      },
+      {
+        "text": "Chỉ làm tăng nguy cơ béo phì",
+        "correct": false
+      },
+      {
+        "text": "Không gây ảnh hưởng gì đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ gây nghiện và không gây ung thư",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
     "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
     "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
@@ -828,32 +855,28 @@
     ]
   },
   {
-    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
-    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
-    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
+    "title": "Màu ráy tai thế nào là bình thường?",
+    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
+    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Màu ráy tai bình thường là gì?",
     "answers": [
       {
-        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
+        "text": "Vàng và hơi dính",
         "correct": true
       },
       {
-        "text": "Không có ảnh hưởng gì.",
+        "text": "Trắng và khô",
         "correct": false
       },
       {
-        "text": "Giúp trẻ em phát triển nhanh chóng.",
+        "text": "Đen và có mùi",
         "correct": false
       },
       {
-        "text": "Làm tăng cường sức khỏe cho trẻ.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
+        "text": "Đỏ và lỏng",
         "correct": false
       }
     ]
@@ -886,28 +909,32 @@
     ]
   },
   {
-    "title": "Màu ráy tai thế nào là bình thường?",
-    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
-    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
+    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
+    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
+    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Màu ráy tai bình thường là gì?",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
     "answers": [
       {
-        "text": "Vàng và hơi dính",
+        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
         "correct": true
       },
       {
-        "text": "Trắng và khô",
+        "text": "Không có ảnh hưởng gì.",
         "correct": false
       },
       {
-        "text": "Đen và có mùi",
+        "text": "Giúp trẻ em phát triển nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Đỏ và lỏng",
+        "text": "Làm tăng cường sức khỏe cho trẻ.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
         "correct": false
       }
     ]
@@ -1083,33 +1110,6 @@
     ]
   },
   {
-    "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
-    "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
-    "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Toyota đã có những đóng góp gì trong 30 năm hoạt động tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Xuất xưởng xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Mở rộng thị trường sang các nước khác.",
-        "correct": false
-      },
-      {
-        "text": "Giảm giá xe cho khách hàng.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường quảng cáo sản phẩm mới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thai phụ uống cacao được không?",
     "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
     "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
@@ -1132,6 +1132,33 @@
       },
       {
         "text": "Cacao có thể gây hại cho thai nhi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
+    "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
+    "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
+    "cat": "kinh-doanh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Toyota đã có những đóng góp gì trong 30 năm hoạt động tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Xuất xưởng xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Mở rộng thị trường sang các nước khác.",
+        "correct": false
+      },
+      {
+        "text": "Giảm giá xe cho khách hàng.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường quảng cáo sản phẩm mới.",
         "correct": false
       }
     ]
@@ -1342,6 +1369,33 @@
     ]
   },
   {
+    "title": "Robinho làm gì trong năm đầu ngồi tù",
+    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
+    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
+    "answers": [
+      {
+        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
+        "correct": true
+      },
+      {
+        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
+        "correct": false
+      },
+      {
+        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
+        "correct": false
+      },
+      {
+        "text": "Anh ấy không làm gì cả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Huyết áp của bạn có bình thường không?",
     "content": "Huyết áp có thể bị ảnh hưởng bởi nhiều yếu tố như lối sống, cân nặng và giấc ngủ. Việc điều chỉnh những yếu tố này có thể giúp huyết áp trở về mức bình thường. Tuy nhiên, cũng có những nguyên nhân khác có thể dẫn đến tình trạng huyết áp cao bất thường. Do đó, việc theo dõi và kiểm tra huyết áp thường xuyên là rất quan trọng.",
     "link": "https://vnexpress.net/huyet-ap-cua-ban-co-binh-thuong-khong-4865191.html",
@@ -1422,33 +1476,6 @@
       },
       {
         "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Robinho làm gì trong năm đầu ngồi tù",
-    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
-    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
-    "answers": [
-      {
-        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
-        "correct": true
-      },
-      {
-        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy không làm gì cả.",
         "correct": false
       }
     ]
@@ -2362,33 +2389,6 @@
     ]
   },
   {
-    "title": "Mụn lưng có thể chữa khỏi không?",
-    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
-    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Mụn lưng có thể chữa khỏi được không?",
-    "answers": [
-      {
-        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, mụn lưng không bao giờ khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
     "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
     "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
@@ -2411,6 +2411,33 @@
       },
       {
         "text": "Để giảm tiếng ồn trong xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mụn lưng có thể chữa khỏi không?",
+    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
+    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Mụn lưng có thể chữa khỏi được không?",
+    "answers": [
+      {
+        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, mụn lưng không bao giờ khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
         "correct": false
       }
     ]
@@ -3730,33 +3757,6 @@
     ]
   },
   {
-    "title": "6 món hỗ trợ cải thiện tiêu hóa",
-    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
-    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
-    "answers": [
-      {
-        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
-        "correct": true
-      },
-      {
-        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Từng mắc quai bị có vô sinh không?",
     "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
     "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
@@ -3779,6 +3779,33 @@
       },
       {
         "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món hỗ trợ cải thiện tiêu hóa",
+    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
+    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
+    "answers": [
+      {
+        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
+        "correct": true
+      },
+      {
+        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
         "correct": false
       }
     ]
