Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "'Ông trùm' thiết bị y tế đang bỏ trốn vẫn bị xét xử trong vụ mua 19.200 hóa đơn",
+    "content": "Ông Nguyễn Đăng Thuyết, người đã bỏ trốn ra nước ngoài, tiếp tục bị xét xử vắng mặt trong vụ án liên quan đến việc mua bán hóa đơn trái phép gây thiệt hại cho Nhà nước hơn 740 tỉ đồng. Ông và các đồng phạm đã thành lập ba công ty cung cấp thiết bị y tế và sử dụng hai hệ thống kế toán để gian lận thuế trong giai đoạn 2017-2022. Phiên tòa xét xử 38 bị can diễn ra tại Tòa án nhân dân TP Hà Nội, trong đó ông Thuyết bị cáo buộc tội ",
+    "link": "https://tuoitre.vn/ong-trum-thiet-bi-y-te-dang-bo-tron-van-bi-xet-xu-trong-vu-mua-19-200-hoa-don-2025032507474185.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Ông Nguyễn Đăng Thuyết bị xét xử vì tội gì?",
+    "answers": [
+      {
+        "text": "Vi phạm quy định về kế toán gây hậu quả nghiêm trọng",
+        "correct": true
+      },
+      {
+        "text": "Trốn thuế",
+        "correct": false
+      },
+      {
+        "text": "Mua bán trái phép thiết bị y tế",
+        "correct": false
+      },
+      {
+        "text": "Lập công ty ma",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
     "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
     "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
@@ -3189,37 +3216,6 @@
     ]
   },
   {
-    "title": "Anh em ông Trịnh Văn Quyết đã khắc phục 972 tỉ đồng trước phiên tòa phúc thẩm",
-    "content": "Trước phiên tòa phúc thẩm diễn ra vào ngày 25-3, anh em ông Trịnh Văn Quyết đã khắc phục tổng cộng 972 tỉ đồng để bồi thường cho các nhà đầu tư. Ông Quyết, cựu chủ tịch Tập đoàn FLC, cùng hai em gái đã nộp tiền nhằm giảm bớt trách nhiệm bồi thường dân sự. Tại phiên tòa sơ thẩm trước đó, ông Quyết đã bị tuyên phạt 21 năm tù do các tội danh liên quan đến thao túng thị trường chứng khoán và lừa đảo.",
-    "link": "https://tuoitre.vn/anh-em-ong-trinh-van-quyet-da-khac-phuc-972-ti-dong-truoc-phien-toa-phuc-tham-20250324114455795.htm",
-    "cat": "phap-luat",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Anh em ông Trịnh Văn Quyết đã khắc phục bao nhiêu tiền trước phiên tòa phúc thẩm?",
-    "answers": [
-      {
-        "text": "972 tỉ đồng",
-        "correct": true
-      },
-      {
-        "text": "600 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "1.700 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "254 tỉ đồng",
-        "correct": false
-      },
-      {
-        "text": "203 tỉ đồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé 8 tuổi bị trầm cảm",
     "content": "Một bé gái 8 tuổi ở Hà Nội đã được chẩn đoán mắc trầm cảm sau khi xuất hiện các triệu chứng như mất ngủ, buồn bã và cáu gắt trong khoảng 2-3 tháng. Dù không có áp lực học tập hay sang chấn tâm lý, bác sĩ cho rằng bệnh có thể liên quan đến yếu tố di truyền, khi bố của bé cũng đang điều trị trầm cảm. Hiện bé đang được điều trị bằng thuốc và can thiệp tâm lý, các chuyên gia khuyến cáo việc nhận biết và can thiệp sớm là rất quan trọng để trẻ phát triển khỏe mạnh trong tương lai.",
     "link": "https://vnexpress.net/be-8-tuoi-bi-tram-cam-4860662.html",
@@ -5120,33 +5116,6 @@
       },
       {
         "text": "Do giá thực phẩm tăng trên toàn cầu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Djokovic xô đổ kỷ lục của Nadal",
-    "content": "Novak Djokovic đã chính thức xô đổ kỷ lục của Rafael Nadal với trận thắng thứ 411 tại ATP Tour, khi đánh bại Camilo Ugo Carabelli với tỷ số 6-1, 7-6(1) tại vòng ba Miami Mở rộng. Chiến thắng này giúp Djokovic vượt qua kỷ lục 410 trận thắng ở Masters 1000 của Nadal. Djokovic hiện tại cũng giữ nhiều kỷ lục khác tại Masters 1000, và đang hướng tới danh hiệu Miami lần thứ bảy.",
-    "link": "https://vnexpress.net/djokovic-xo-do-ky-luc-cua-nadal-4864958.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Djokovic đã xô đổ kỷ lục nào của Nadal?",
-    "answers": [
-      {
-        "text": "Kỷ lục 410 trận thắng tại Masters 1000",
-        "correct": true
-      },
-      {
-        "text": "Kỷ lục 99 lần vào tứ kết",
-        "correct": false
-      },
-      {
-        "text": "Kỷ lục 40 Cup",
-        "correct": false
-      },
-      {
-        "text": "Kỷ lục 59 trận chung kết",
         "correct": false
       }
     ]
